<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_dues">

    <ImageView
        android:id="@+id/header_maincontent_background"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="-3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_header_maincontent_background" />

    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="13dp"
        android:letterSpacing="0.1"
        android:text="@string/tipid"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tvUsername"
        app:layout_constraintStart_toStartOf="@+id/header_maincontent_background"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnAccount"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="#282A30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/header_maincontent_background"
        app:srcCompat="@drawable/ic_account_icon" />

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:text="TextView"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toStartOf="@+id/btnAccount"
        app:layout_constraintStart_toEndOf="@+id/tvAppName"
        app:layout_constraintTop_toTopOf="@+id/header_maincontent_background"
        android:gravity="end" />

    <Button
        android:id="@+id/btnEarnings"
        android:layout_width="0dp"
        android:layout_height="37dp"
        android:elevation="0dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/earnings"
        android:textSize="10sp"
        app:backgroundTint="#8C96A8"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toStartOf="@+id/btnExpenses"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_maincontent_background" />

    <Button
        android:id="@+id/btnExpenses"
        android:layout_width="0dp"
        android:layout_height="37dp"
        android:elevation="0dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/expenses"
        android:textSize="10sp"
        app:backgroundTint="#8C96A8"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toStartOf="@+id/btnDues"
        app:layout_constraintStart_toEndOf="@+id/btnEarnings"
        app:layout_constraintTop_toBottomOf="@+id/header_maincontent_background" />

    <Button
        android:id="@+id/btnDues"
        android:layout_width="0dp"
        android:layout_height="37dp"
        android:elevation="0dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/dues"
        android:textSize="10sp"
        app:backgroundTint="#8C96A8"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toStartOf="@+id/btnSavings"
        app:layout_constraintStart_toEndOf="@+id/btnExpenses"
        app:layout_constraintTop_toBottomOf="@+id/header_maincontent_background" />

    <Button
        android:id="@+id/btnSavings"
        android:layout_width="0dp"
        android:layout_height="37dp"
        android:elevation="0dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/savings"
        android:textSize="10sp"
        app:backgroundTint="#4381C0"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnDues"
        app:layout_constraintTop_toBottomOf="@+id/header_maincontent_background" />

    <TextView
        android:id="@+id/tvSavings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="200dp"
        android:layout_marginRight="200dp"
        android:text="@string/totalsavings"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnExpenses" />

    <TextView
        android:id="@+id/tvSavingsTotal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:gravity="center_horizontal"
        android:text="000,000,000.00"
        android:textAlignment="center"
        android:textColor="#4381C0"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSavings" />

    <TextView
        android:id="@+id/tvSavingGoal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="200dp"
        android:layout_marginRight="200dp"
        android:text="@string/savingsgoal"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/tvGoalName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:text="@string/savingfor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSavingGoal" />

    <TextView
        android:id="@+id/tvRemainingAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:text="@string/savingprogress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvGoalName" />

    <Button
        android:id="@+id/btnCreateGoal"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:elevation="4dp"
        android:letterSpacing="0.3"
        android:stateListAnimator="@null"
        android:text="@string/createsavingsgoal"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        android:textStyle="bold"
        app:backgroundTint="#4381C0"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRemainingAmount" />

    <Button
        android:id="@+id/btnAddBonus"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:elevation="4dp"
        android:letterSpacing="0.3"
        android:stateListAnimator="@null"
        android:text="@string/update"
        android:textColor="#FFFFFF"
        android:textSize="10sp"
        android:textStyle="bold"
        app:backgroundTint="#4381C0"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSavingsTotal" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUpdateGuide"
        app:srcCompat="@drawable/ic_divider_line2" />

    <TextView
        android:id="@+id/tvUpdateGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center_horizontal"
        android:text="@string/updateguide"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAddBonus" />

</androidx.constraintlayout.widget.ConstraintLayout>